test more modules on JDK 21